# ChangeLog for virtual/perl-IO-Compress-Bzip2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Bzip2/ChangeLog,v 1.4 2009/05/05 14:08:10 tove Exp $

  05 May 2009; Torsten Veller <tove@gentoo.org>
  perl-IO-Compress-Bzip2-2.019.ebuild:
  Add ~mips (#268615)

*perl-IO-Compress-Bzip2-2.019 (04 May 2009)

  04 May 2009; Torsten Veller <tove@gentoo.org>
  +perl-IO-Compress-Bzip2-2.019.ebuild:
  Version bump

*perl-IO-Compress-Bzip2-2.015 (18 Apr 2009)

  18 Apr 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +perl-IO-Compress-Bzip2-2.015.ebuild:
  New virtual for IO-Compress-Bzip2
