@@ -1,4 +1,5 @@
 EBUILD perl-IO-Compress-Bzip2-2.015.ebuild 489 RMD160 ce274060a2fbeb7cdd1fb9d1c1d7155f7b90dc1b SHA1 dc8030b3f516ccceaf2912543664551a76382268 SHA256 6cdbca34c2ac03a09c9a3e85f9edd20ba06e1265e58fe7fa5284e9673f4cc8c8
 EBUILD perl-IO-Compress-Bzip2-2.019.ebuild 486 RMD160 196900f9e21f3e5c46f37a6cd1fc78c0b67c4c82 SHA1 c3b34e042551924c2d13629fdaead734eb479d9e SHA256 21ee05b2e13b825573be0e0366f0e8c98c6bd1ce792bbd7e6b615caad6332135
-MISC ChangeLog 675 RMD160 e75248417ee7e220fa5f2223223503345e922edf SHA1 cc2664af0ee199d364d1c5eb021b510f581d0df1 SHA256 1b4fe6bb6d9e518dfdade8663c16517129e9c7fab130a6b6f6163a552ab8040c
+EBUILD perl-IO-Compress-Bzip2-2.020.ebuild 486 RMD160 fa4ab7893605b41732c0e1ce342f22615e03fbb3 SHA1 2f30c8f6ec3f310ff49361d929160003c1ab02e4 SHA256 a19ed54766e8c9d504156e5476318690b0ee56a2f6e100d89e2718279c73e127
+MISC ChangeLog 824 RMD160 72f034739f3aa9960acadfe9b891bedb773ddd9c SHA1 087bcf1306bb3d4d53b693937e43c8c542a5c21d SHA256 bbe59bf9b3cd6ec140b613feff6f58646fa0ba01b6ac1a3027b920bd4aeb9152
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
