@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-IO-Compress-Bzip2/perl-IO-Compress-Bzip2-2.020.ebuild,v 1.1 2009/06/03 22:24:36 tove Exp $
+
+DESCRIPTION="Virtual for IO-Compress-Bzip2"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
+IUSE=""
+
+RDEPEND="~virtual/perl-IO-Compress-${PV}"
